refactor(product image): logic remove images