@@ -24,43 +24,48 @@ public class ProductImageServiceImpl implements ProductImageService {
     CloudinaryUtils cloudinaryUtils;
     ProductRepository productRepository;
 
-    private ProductImageDTO convertAndUploadProductImageList(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles) {
+    private List<ProductImageDTO> convertAndUploadProductImageList(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles) {
         // convert product image files to list of files
         List<File> productImages = productImageFiles.stream().map(file -> {
             try {
                 return cloudinaryUtils.convertMultipartFileToFile(file);
             } catch (Exception e) {
-                throw new RuntimeException("Error uploading image");
+                throw new RuntimeException("Error converting file");
             }
         }).toList();
 
-        // upload images to cloudinary
+        // upload images to cloudinary and database
         String productName = productRepository.findProductByProductId(productImageDTO.getProductId()).getProductName();
-//        List<String> productImageUrls = productImages.stream().map(file -> {
-//            try {
-//                return cloudinaryUtils.uploadImage(file, productName);
-//            } catch (Exception e) {
-//                throw new RuntimeException("Error uploading image");
-//            }
-//        }).toList();
-        List<String> productImageUrls = new java.util.ArrayList<>(List.of());
-        for (int i = 0; i < productImages.size(); i++) {
+//        List<String> productImageUrls = new java.util.ArrayList<>(List.of());
+        int nextIndex = 1;
+        String publicId = "CT553/" + productName + " - Img " + nextIndex;
+        for (File image : productImages) {
             try {
-                productImageUrls.add(cloudinaryUtils.uploadImage(productImages.get(i), productName + " - Img " + (i + 1)));
+                while (productImageRepository.existsByPublicId(publicId)) {
+                    nextIndex++;
+                    publicId = "CT553/" + productName + " - Img " + nextIndex;
+                }
+
+                // upload image to cloudinary
+                String productImageUrls = cloudinaryUtils.uploadImage(image, productName + " - Img " + nextIndex);
+
+                // save image to database
+                ProductImage productImage = new ProductImage();
+                productImage.setProduct(Product.builder().productId(productImageDTO.getProductId()).build());
+                productImage.setImageUrl(productImageUrls);
+                productImage.setPublicId(publicId);
+                productImageRepository.save(productImage);
+
+                nextIndex++;
+                publicId = "CT553/" + productName + " - Img " + nextIndex;
             } catch (Exception e) {
                 throw new RuntimeException("Error uploading image");
             }
         }
 
-        // save product images to database
-        List<ProductImage> productImageList = productImageUrls.stream().map(url -> {
-            ProductImage productImage = new ProductImage();
-            productImage.setProduct(Product.builder().productId(productImageDTO.getProductId()).build());
-            productImage.setImageUrl(url);
-            return productImage;
-        }).toList();
-        productImageRepository.saveAll(productImageList);
-        return productImageDTO;
+        return productImageRepository.findAllByProduct_ProductId(productImageDTO.getProductId()).stream()
+                .map(productImageMapper::toProductImageDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -71,26 +76,12 @@ public class ProductImageServiceImpl implements ProductImageService {
     }
 
     @Override
-    public ProductImageDTO createProductImage(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles) throws ResourceNotFoundException {
+    public List<ProductImageDTO> createProductImage(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles) throws ResourceNotFoundException {
         if (productRepository.findProductByProductId(productImageDTO.getProductId()) == null) {
             throw new ResourceNotFoundException("Product not found");
         }
-
         if (productImageFiles == null || productImageFiles.isEmpty()) {
-            return productImageDTO;
-        }
-
-        return convertAndUploadProductImageList(productImageDTO, productImageFiles);
-    }
-
-    @Override
-    public ProductImageDTO updateAllProductImageByProductId(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles) throws ResourceNotFoundException {
-        if (productRepository.findProductByProductId(productImageDTO.getProductId()) == null) {
-            throw new ResourceNotFoundException("Product not found");
-        }
-
-        if (productImageFiles == null || productImageFiles.isEmpty()) {
-            return productImageDTO;
+            throw new ResourceNotFoundException("No image files");
         }
 
         // delete all old product images in cloudinary and database
@@ -103,6 +94,36 @@ public class ProductImageServiceImpl implements ProductImageService {
                 throw new RuntimeException(e);
             }
         });
+
+        return convertAndUploadProductImageList(productImageDTO, productImageFiles);
+    }
+
+    @Override
+    public List<ProductImageDTO> updateProductImageByProductId(ProductImageDTO productImageDTO, List<MultipartFile> productImageFiles, List<String> publicIdOfImageFiles) throws ResourceNotFoundException {
+        if (productRepository.findProductByProductId(productImageDTO.getProductId()) == null) {
+            throw new ResourceNotFoundException("Product not found");
+        }
+        if (productImageFiles == null || productImageFiles.isEmpty() || productImageFiles.stream().allMatch(MultipartFile::isEmpty)) {
+            throw new ResourceNotFoundException("No image files");
+        }
+        if (publicIdOfImageFiles == null || publicIdOfImageFiles.isEmpty()) {
+            throw new ResourceNotFoundException("No public id of image files");
+        }
+
+        // delete all old product images in cloudinary and database that have no public id in the public id list
+        List<ProductImage> oldProductImages = productImageRepository.findAllByProduct_ProductId(productImageDTO.getProductId());
+        for (ProductImage image : oldProductImages) {
+            if (!publicIdOfImageFiles.contains(image.getPublicId())) {
+                System.out.println("Need to delete images: " + publicIdOfImageFiles);
+                System.out.println("Deleting image with public id: " + image.getPublicId());
+                try {
+                    cloudinaryUtils.deleteImage(image.getImageUrl());
+                    deleteProductImage(image.getProductImageId());
+                } catch (Exception e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        }
 
         // convert and upload new product images
         return convertAndUploadProductImageList(productImageDTO, productImageFiles);
